[metadata]
name = python-zfs
version = attr: zfs.__version__
description = A Python library to wrap ZFS tasks
author = Anton Hvornum
author_email = anton@hvornum.se
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
license_files =
    LICENSE
project_urls =
    Source = https://github.com/Torxed/python-zfs
    Documentation = https://python-zfs.readthedocs.io/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >= 3.8

[options.packages.find]
include =
    zfs
    zfs.*

[options.entry_points]
console_scripts =
    pyzfs = zfs:main
